--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
 
     <main>
         <!-- ======== HERO ======== -->
-        <section class="hero">
+        <!-- <section class="hero">
             <div class="conteiner">
                 <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
                 <button class="modal-btn" type="button" data-modal-open>Заказать услугу</button>
             </div>
-        </section>
+        </section> -->
         <!-- ====== END HERO ====== -->
 
         <!-- ======== BENEFITS ======== -->
-        <section class="benefits">
+        <!-- <section class="benefits">
             <div class="conteiner">
                 <h2 class="benefits__title visually-hidden">Наши Преимущества</h2>
                 <ul class="benefits-list list">
@@ -117,11 +117,11 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <!-- ====== END BENEFITS ====== -->
 
         <!-- ======= DEVELOPMENT ======= -->
-        <section class="development">
+        <!-- <section class="development">
             <h2 class="development__title">Чем мы занимаемся</h2>
             <div class="conteiner">
                 <ul class="development__list list">
@@ -140,11 +140,11 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <!-- ===== END DEVELOPMENT ===== -->
 
         <!-- ========= TEAM ========= -->
-        <section class="team">
+        <!-- <section class="team">
             <div class="conteiner">
                 <h2 class="team__title">Наша команда</h2>
                 <ul class="team-card list">
@@ -301,11 +301,11 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <!-- ======= END TEAM ======= -->
 
         <!-- ======== CLIENTS ======== -->
-        <section class="clients">
+        <!-- <section class="clients">
             <div class="conteiner">
                 <h2 class="clients__title">Постоянные клиенты</h2>
                 <ul class="clients__list list">
@@ -365,12 +365,12 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <!-- ====== END CLIENTS ====== -->
     </main>
 
     <!-- ======== FOOTER ======== -->
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="conteiner">
             <div class="footer__adress-conteiner">
                 <a class="logo link" href="index.html" lang="en">Web<span class="logo__dark-theme">Studio</span></a>
@@ -435,11 +435,11 @@
                 </form>
             </div>
         </div>
-    </footer>
+    </footer> -->
     <!-- ====== END FOOTER ====== -->
 
     <!-- ======== MODAL ======== -->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
         <div class="modal-window">
             <button type="button" class="modal-window__close-btn" data-modal-close>
                 <svg width="18px" height="18px">
@@ -483,10 +483,10 @@
                 <button type="submit" class="modal-form__button">Отправить</button>
             </form>
         </div>
-    </div>
+    </div> -->
     <!-- ====== END MODAL ====== -->
 
-    <script src="./js/modal.js"></script>
+    <!-- <script src="./js/modal.js"></script> -->
 </body>
 
 </html>
