--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <ul class="contacts-list list">
                 <li class="contacts-list__item">
                     <a class="contacts-list__link link" href="mailto:info@devstudio.com">
-                        <svg class="contacts-list__icon" width="16px" height="12px">
+                        <svg class="contacts-list__icon contacts-list__icon-email">
                             <use href="./images/icons.svg#icon-envelope"></use>
                         </svg>
                         info@devstudio.com
@@ -51,7 +51,7 @@
                 </li>
                 <li class="contacts-list__item">
                     <a class="contacts-list__link link" href="tel:+380961111111">
-                        <svg class="contacts-list__icon" width="10px" height="16px">
+                        <svg class="contacts-list__icon contacts-list__icon-tel">
                             <use href="./images/icons.svg#icon-smartphone"></use>
                         </svg>
                         +38 096 111 11 11
