--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
 
     <main>
         <!-- ======== HERO ======== -->
-        <!-- <section class="hero">
+        <section class="hero">
             <div class="conteiner">
                 <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
                 <button class="modal-btn" type="button" data-modal-open>Заказать услугу</button>
             </div>
-        </section> -->
+        </section>
         <!-- ====== END HERO ====== -->
 
         <!-- ======== BENEFITS ======== -->
