--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
         <!-- ====== END HERO ====== -->
 
         <!-- ======== BENEFITS ======== -->
-        <!-- <section class="benefits">
+        <section class="benefits">
             <div class="conteiner">
                 <h2 class="benefits__title visually-hidden">Наши Преимущества</h2>
                 <ul class="benefits-list list">
                     <li class="benefits-list__item">
                         <div class="benefits-list__conteiner">
-                            <svg width="70px" height="70px">
+                            <svg class="benefits-list__icon">
                                 <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
                         </div>
@@ -133,7 +133,7 @@
                     </li>
                     <li class="benefits-list__item">
                         <div class="benefits-list__conteiner">
-                            <svg width="70px" height="70px">
+                            <svg class="benefits-list__icon">
                                 <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
@@ -144,7 +144,7 @@
                     </li>
                     <li class="benefits-list__item">
                         <div class="benefits-list__conteiner">
-                            <svg width="70px" height="70px">
+                            <svg class="benefits-list__icon">
                                 <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
@@ -153,9 +153,10 @@
                             степени
                             обуславливает.</p>
                     </li>
+
                     <li class="benefits-list__item">
                         <div class="benefits-list__conteiner">
-                            <svg width="70px" height="70px">
+                            <svg class="benefits-list__icon">
                                 <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
@@ -166,7 +167,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
         <!-- ====== END BENEFITS ====== -->
 
         <!-- ======= DEVELOPMENT ======= -->
