--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <!-- ====== END BENEFITS ====== -->
 
         <!-- ======= DEVELOPMENT ======= -->
-        <!-- <section class="development">
+        <section class="development">
             <h2 class="development__title">Чем мы занимаемся</h2>
             <div class="conteiner">
                 <ul class="development__list list">
@@ -190,7 +190,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
         <!-- ===== END DEVELOPMENT ===== -->
 
         <!-- ========= TEAM ========= -->
