--- a/index.html
+++ b/index.html
@@ -194,13 +194,26 @@
         <!-- ===== END DEVELOPMENT ===== -->
 
         <!-- ========= TEAM ========= -->
-        <!-- <section class="team">
+        <section class="team">
             <div class="conteiner">
                 <h2 class="team__title">Наша команда</h2>
                 <ul class="team-card list">
                     <li class="team-card__item">
-                        <img src="./images/team1.jpg" alt="Игорь Демьяненко - разработчик проекта" width="270"
-                            height="260">
+                        <picture>
+                            <source srcset="./images/team/team1-desktop.webp 1x, ./images/team/team1-desktop@2x.webp 2x"
+                                media="(min-width: 1200px)" type="image/webp">
+                            <source srcset="./images/team/team1-desktop.jpg 1x, ./images/team/team1-desktop@2x.jpg 2x"
+                                media="(min-width: 1200px)">
+                            <source srcset="./images/team/team1-tablet.webp 1x, ./images/team/team1-tablet@2x.webp 2x"
+                                media="(min-width: 768px)" type="image/webp">
+                            <source srcset="./images/team/team1-tablet.jpg 1x, ./images/team/team1-tablet@2x.jpg 2x"
+                                media="(min-width: 768px)">
+                            <source srcset="./images/team/team1-mobile.webp 1x, ./images/team/team1-mobile@2x.webp 2x"
+                                media="(min-width: 320px)" type="image/webp">
+                            <source srcset="./images/team/team1-mobile.jpg 1x, ./images/team/team1-mobile@2x.jpg 2x"
+                                media="(min-width: 320px)">
+                            <img src="./images/team/team1-desktop.jpg" alt="Игорь Демьяненко - разработчик проекта">
+                        </picture>
                         <div class="team-card__conteiner">
                             <h3 class="team-card__title">Игорь Демьяненко</h3>
                             <p class="team-card__text" lang="en">Product Designer</p>
@@ -237,8 +250,21 @@
                         </div>
                     </li>
                     <li class="team-card__item">
-                        <img src="./images/team2.jpg" alt="Ольга Репина - фронтенд разработчик" width="270"
-                            height="260">
+                        <picture>
+                            <source srcset="./images/team/team2-desktop.webp 1x, ./images/team/team2-desktop@2x.webp 2x"
+                                media="(min-width: 1200px)" type="image/webp">
+                            <source srcset="./images/team/team2-desktop.jpg 1x, ./images/team/team2-desktop@2x.jpg 2x"
+                                media="(min-width: 1200px)">
+                            <source srcset="./images/team/team2-tablet.webp 1x, ./images/team/team2-tablet@2x.webp 2x"
+                                media="(min-width: 768px)" type="image/webp">
+                            <source srcset="./images/team/team2-tablet.jpg 1x, ./images/team/team2-tablet@2x.jpg 2x"
+                                media="(min-width: 768px)">
+                            <source srcset="./images/team/team2-mobile.webp 1x, ./images/team/team2-mobile@2x.webp 2x"
+                                media="(min-width: 320px)" type="image/webp">
+                            <source srcset="./images/team/team2-mobile.jpg 1x, ./images/team/team2-mobile@2x.jpg 2x"
+                                media="(min-width: 320px)">
+                            <img src="./images/team/team2-desktop.jpg" alt="Ольга Репина - фронтенд разработчик">
+                        </picture>
                         <div class="team-card__conteiner">
                             <h3 class="team-card__title">Ольга Репина</h3>
                             <p class="team-card__text" lang="en">Frontend Developer</p>
@@ -275,7 +301,21 @@
                         </div>
                     </li>
                     <li class="team-card__item">
-                        <img src="./images/team3.jpg" alt="Николай Тарасов - маркетинг" width="270" height="260">
+                        <picture>
+                            <source srcset="./images/team/team3-desktop.webp 1x, ./images/team/team3-desktop@2x.webp 2x"
+                                media="(min-width: 1200px)" type="image/webp">
+                            <source srcset="./images/team/team3-desktop.jpg 1x, ./images/team/team3-desktop@2x.jpg 2x"
+                                media="(min-width: 1200px)">
+                            <source srcset="./images/team/team3-tablet.webp 1x, ./images/team/team3-tablet@2x.webp 2x"
+                                media="(min-width: 768px)" type="image/webp">
+                            <source srcset="./images/team/team3-tablet.jpg 1x, ./images/team/team3-tablet@2x.jpg 2x"
+                                media="(min-width: 768px)">
+                            <source srcset="./images/team/team3-mobile.webp 1x, ./images/team/team3-mobile@2x.webp 2x"
+                                media="(min-width: 320px)" type="image/webp">
+                            <source srcset="./images/team/team3-mobile.jpg 1x, ./images/team/team3-mobile@2x.jpg 2x"
+                                media="(min-width: 320px)">
+                            <img src="./images/team/team3-desktop.jpg" alt="Николай Тарасов - маркетинг">
+                        </picture>
                         <div class="team-card__conteiner">
                             <h3 class="team-card__title">Николай Тарасов</h3>
                             <p class="team-card__text" lang="en">Marketing</p>
@@ -312,8 +352,21 @@
                         </div>
                     </li>
                     <li class="team-card__item">
-                        <img src="./images/team4.jpg" alt="Михаил Ермаков - разработчик интерфейса" width="270"
-                            height="260">
+                        <picture>
+                            <source srcset="./images/team/team4-desktop.webp 1x, ./images/team/team4-desktop@2x.webp 2x"
+                                media="(min-width: 1200px)" type="image/webp">
+                            <source srcset="./images/team/team4-desktop.jpg 1x, ./images/team/team4-desktop@2x.jpg 2x"
+                                media="(min-width: 1200px)">
+                            <source srcset="./images/team/team4-tablet.webp 1x, ./images/team/team4-tablet@2x.webp 2x"
+                                media="(min-width: 768px)" type="image/webp">
+                            <source srcset="./images/team/team4-tablet.jpg 1x, ./images/team/team4-tablet@2x.jpg 2x"
+                                media="(min-width: 768px)">
+                            <source srcset="./images/team/team4-mobile.webp 1x, ./images/team/team4-mobile@2x.webp 2x"
+                                media="(min-width: 320px)" type="image/webp">
+                            <source srcset="./images/team/team4-mobile.jpg 1x, ./images/team/team4-mobile@2x.jpg 2x"
+                                media="(min-width: 320px)">
+                            <img src="../images/team/team4-desktop.jpg" alt="Михаил Ермаков - разработчик интерфейса">
+                        </picture>
                         <div class="team-card__conteiner">
                             <h3 class="team-card__title">Михаил Ермаков</h3>
                             <p class="team-card__text" lang="en">UI Designer</p>
@@ -351,7 +404,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
         <!-- ======= END TEAM ======= -->
 
         <!-- ======== CLIENTS ======== -->
