--- a/index.html
+++ b/index.html
@@ -176,16 +176,40 @@
             <div class="conteiner">
                 <ul class="development__list list">
                     <li class="development__item">
-                        <img src="./images/box1.jpg" alt="Человек пишет код программы" width="370" height="294">
+                        <picture>
+                            <source
+                                srcset="./images/development/box1-desktop.webp 1x, ./images/development/box1-desktop@2x.webp 2x"
+                                media="(min-width: 1200px)" type="image/webp">
+                            <source
+                                srcset="./images/development/box1-desktop.jpg 1x, ./images/development/box1-desktop@2x.jpg 2x"
+                                media="(min-width: 1200px)">
+                            <img src="./images/development/box1-desktop.jpg" alt="Человек пишет код программы">
+                        </picture>
+
                         <p class="development__text">Десктопные приложения</p>
                     </li>
                     <li class="development__item">
-                        <img src="./images/box2.jpg" alt="Человек занимается оформлением сайта" width="370"
-                            height="294">
+                        <picture>
+                            <source
+                                srcset="./images/development/box2-desktop.webp 1x, ./images/development/box2-desktop@2x.webp 2x"
+                                media="(min-width: 1200px)" type="image/webp">
+                            <source
+                                srcset="./images/development/box2-desktop.jpg 1x, ./images/development/box2-desktop@2x.jpg 2x"
+                                media="(min-width: 1200px)">
+                            <img src="./images/development/box2-desktop.jpg" alt="Человек занимается оформлением сайта">
+                        </picture>
                         <p class="development__text">Мобильные приложения</p>
                     </li>
                     <li class="development__item">
-                        <img src="./images/box3.jpg" alt="Человек создает дизайн сайта" width="370" height="294">
+                        <picture>
+                            <source
+                                srcset="./images/development/box3-desktop.webp 1x, ./images/development/box3-desktop@2x.webp 2x"
+                                media="(min-width: 1200px)" type="image/webp">
+                            <source
+                                srcset="./images/development/box3-desktop.jpg 1x, ./images/development/box3-desktop@2x.jpg 2x"
+                                media="(min-width: 1200px)">
+                            <img src="./images/development/box3-desktop.jpg" alt="Человек создает дизайн сайта">
+                        </picture>
                         <p class="development__text">Дизайнерские решения</p>
                     </li>
                 </ul>
@@ -209,10 +233,11 @@
                             <source srcset="./images/team/team1-tablet.jpg 1x, ./images/team/team1-tablet@2x.jpg 2x"
                                 media="(min-width: 768px)">
                             <source srcset="./images/team/team1-mobile.webp 1x, ./images/team/team1-mobile@2x.webp 2x"
-                                media="(min-width: 320px)" type="image/webp">
+                                media="(min-width: 480px)" type="image/webp">
                             <source srcset="./images/team/team1-mobile.jpg 1x, ./images/team/team1-mobile@2x.jpg 2x"
-                                media="(min-width: 320px)">
-                            <img src="./images/team/team1-desktop.jpg" alt="Игорь Демьяненко - разработчик проекта">
+                                media="(min-width: 480px)">
+                            <img class="team-card__img" src="./images/team/team1-mobile.jpg"
+                                alt="Игорь Демьяненко - разработчик проекта">
                         </picture>
                         <div class="team-card__conteiner">
                             <h3 class="team-card__title">Игорь Демьяненко</h3>
@@ -260,10 +285,11 @@
                             <source srcset="./images/team/team2-tablet.jpg 1x, ./images/team/team2-tablet@2x.jpg 2x"
                                 media="(min-width: 768px)">
                             <source srcset="./images/team/team2-mobile.webp 1x, ./images/team/team2-mobile@2x.webp 2x"
-                                media="(min-width: 320px)" type="image/webp">
+                                media="(min-width: 480px)" type="image/webp">
                             <source srcset="./images/team/team2-mobile.jpg 1x, ./images/team/team2-mobile@2x.jpg 2x"
-                                media="(min-width: 320px)">
-                            <img src="./images/team/team2-desktop.jpg" alt="Ольга Репина - фронтенд разработчик">
+                                media="(min-width: 480px)">
+                            <img class="team-card__img" src="./images/team/team2-mobile.jpg"
+                                alt="Ольга Репина - фронтенд разработчик">
                         </picture>
                         <div class="team-card__conteiner">
                             <h3 class="team-card__title">Ольга Репина</h3>
@@ -311,10 +337,11 @@
                             <source srcset="./images/team/team3-tablet.jpg 1x, ./images/team/team3-tablet@2x.jpg 2x"
                                 media="(min-width: 768px)">
                             <source srcset="./images/team/team3-mobile.webp 1x, ./images/team/team3-mobile@2x.webp 2x"
-                                media="(min-width: 320px)" type="image/webp">
+                                media="(min-width: 480px)" type="image/webp">
                             <source srcset="./images/team/team3-mobile.jpg 1x, ./images/team/team3-mobile@2x.jpg 2x"
-                                media="(min-width: 320px)">
-                            <img src="./images/team/team3-desktop.jpg" alt="Николай Тарасов - маркетинг">
+                                media="(min-width: 480px)">
+                            <img class="team-card__img" src="./images/team/team3-mobile.jpg"
+                                alt="Николай Тарасов - маркетинг">
                         </picture>
                         <div class="team-card__conteiner">
                             <h3 class="team-card__title">Николай Тарасов</h3>
@@ -362,10 +389,11 @@
                             <source srcset="./images/team/team4-tablet.jpg 1x, ./images/team/team4-tablet@2x.jpg 2x"
                                 media="(min-width: 768px)">
                             <source srcset="./images/team/team4-mobile.webp 1x, ./images/team/team4-mobile@2x.webp 2x"
-                                media="(min-width: 320px)" type="image/webp">
+                                media="(min-width: 480px)" type="image/webp">
                             <source srcset="./images/team/team4-mobile.jpg 1x, ./images/team/team4-mobile@2x.jpg 2x"
-                                media="(min-width: 320px)">
-                            <img src="../images/team/team4-desktop.jpg" alt="Михаил Ермаков - разработчик интерфейса">
+                                media="(min-width: 480px)">
+                            <img class="team-card__img" src="./images/team/team4-mobile.jpg"
+                                alt="Михаил Ермаков - разработчик интерфейса">
                         </picture>
                         <div class="team-card__conteiner">
                             <h3 class="team-card__title">Михаил Ермаков</h3>
