--- a/index.html
+++ b/index.html
@@ -436,14 +436,14 @@
         <!-- ======= END TEAM ======= -->
 
         <!-- ======== CLIENTS ======== -->
-        <!-- <section class="clients">
+        <section class="clients">
             <div class="conteiner">
                 <h2 class="clients__title">Постоянные клиенты</h2>
                 <ul class="clients__list list">
                     <li>
                         <div class="clients__conteiner">
                             <a class="link" href="">
-                                <svg class="clients__icon" width="106px" height="60px">
+                                <svg class="clients__icon">
                                     <use href="./images/icons.svg#icon-client-1"></use>
                                 </svg>
                             </a>
@@ -452,7 +452,7 @@
                     <li>
                         <div class="clients__conteiner">
                             <a class="link" href="">
-                                <svg class="clients__icon" width="106px" height="60px">
+                                <svg class="clients__icon">
                                     <use href="./images/icons.svg#icon-client-2"></use>
                                 </svg>
                             </a>
@@ -461,7 +461,7 @@
                     <li>
                         <div class="clients__conteiner">
                             <a class="link" href="">
-                                <svg class="clients__icon" width="106px" height="60px">
+                                <svg class="clients__icon">
                                     <use href="./images/icons.svg#icon-client-3"></use>
                                 </svg>
                             </a>
@@ -470,7 +470,7 @@
                     <li>
                         <div class="clients__conteiner">
                             <a class="link" href="">
-                                <svg class="clients__icon" width="106px" height="60px">
+                                <svg class="clients__icon">
                                     <use href="./images/icons.svg#icon-client-4"></use>
                                 </svg>
                             </a>
@@ -479,7 +479,7 @@
                     <li>
                         <div class="clients__conteiner">
                             <a class="link" href="">
-                                <svg class="clients__icon" width="106px" height="60px">
+                                <svg class="clients__icon">
                                     <use href="./images/icons.svg#icon-client-5"></use>
                                 </svg>
                             </a>
@@ -488,7 +488,7 @@
                     <li>
                         <div class="clients__conteiner">
                             <a class="link" href="">
-                                <svg class="clients__icon" width="106px" height="60px">
+                                <svg class="clients__icon">
                                     <use href="./images/icons.svg#icon-client-6"></use>
                                 </svg>
                             </a>
@@ -496,7 +496,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
         <!-- ====== END CLIENTS ====== -->
     </main>
 
