--- a/index.html
+++ b/index.html
@@ -501,24 +501,26 @@
     </main>
 
     <!-- ======== FOOTER ======== -->
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="conteiner">
-            <div class="footer__adress-conteiner">
+            <div class="center">
                 <a class="logo link" href="index.html" lang="en">Web<span class="logo__dark-theme">Studio</span></a>
-                <address class="address">
-                    <a class="adress__link link" href="https://goo.gl/maps/y6NcmPz2KW6kS1Qi8" target="_blank"
-                        rel="noopener noreferer">г. Киев,
-                        пр-т
-                        Леси Украинки, 26</a>
-                    <ul class="list">
-                        <li class="adress__item">
-                            <a class="adress__link-email link" href="mailto:info@example.com">info@example.com</a>
-                        </li>
-                        <li class="adress__item">
-                            <a class="adress__link-tel link" href="tel:+380991111111">+38 099 111 11 11</a>
-                        </li>
-                    </ul>
-                </address>
+                <div class="footer__adress-conteiner">
+                    <address class="address">
+                        <a class="adress__link link" href="https://goo.gl/maps/y6NcmPz2KW6kS1Qi8" target="_blank"
+                            rel="noopener noreferer">г. Киев,
+                            пр-т
+                            Леси Украинки, 26</a>
+                        <ul class="address__contacts-list list">
+                            <li class="adress__item">
+                                <a class="adress__link-email link" href="mailto:info@example.com">info@example.com</a>
+                            </li>
+                            <li class="adress__item">
+                                <a class="adress__link-tel link" href="tel:+380991111111">+38 099 111 11 11</a>
+                            </li>
+                        </ul>
+                    </address>
+                </div>
             </div>
             <div class="footer__social-links-conteiner">
                 <p class="footer__social-links-text">присоединяйтесь</p>
@@ -566,7 +568,7 @@
                 </form>
             </div>
         </div>
-    </footer> -->
+    </footer>
     <!-- ====== END FOOTER ====== -->
 
     <!-- ======== MODAL ======== -->
